# job-search-api

./: .dockerignore  .env.example  .gitignore  .railwayignore  API-FIXES-SUMMARY.md  API-PARAMETERS-GUIDE.md  API-TEST-REPORT.md  COMMIT_MSG.tmp  CURRENT-STATE.md  DATETIME-FIX.md  DEBUG-RESULTS-ANALYSIS.md  DEFAULT_VS_MANUAL_SEARCH.md  Dockerfile  FIXES-COMPLETE.md  HEADLESS-SCRAPER-IMPROVEMENTS.md  HEADLESS-SCRAPERS-STATUS.md  HEADLESS-SCRAPERS-TEST.md  HOSTING-OPTIONS.md  JOBSPY.md  LOCAL-SETUP-SUMMARY.md  LOCAL-TESTING-GUIDE.md  LOCAL-TESTING-QUICK-REF.md  PREFERENCES.md  PROJECT-PLAN.md  QUICK-START.md  README.md  SCRAPER-FIXES-SUMMARY.md  SOURCES_STATUS.md  SYSTEM-MONITORING.md  requirements.txt  setup_local.ps1  test_local.ps1
app/: __init__.py  cache.py  jobspy_integration.py  main.py  models.py  scoring.py  scraper.py  storage.py
custom-scrapers-testing/: .gitignore  README.md  dry_run.py  index.html  pyproject.toml  requirements.txt  scraper_test.ipynb  server.py
docs/: README.md
jobsentinel-testing/: README.md  boards_test.ipynb  pyproject.toml  requirements.txt
jobspy-testing/: README.md  jobspy_test.ipynb  pyproject.toml  requirements.txt
local-ui/: ANALYTICS-RAILWAY-UI.md  README-LINKEDIN-SCRAPER.md  README.md  REFRESH-LOGIC-EXPLAINED.md  analytics.js  app.js  index.html  interview-prep.html  interview-prep.js  jobs.csv  jobspy-tech.html  jobspy.html  jobspy.js  linkedin-scraper.ipynb  linkedin-scraper.py  monitor.html  prep-flyout.js  requirements-linkedin-scraper.txt  rssjobs.html  rssjobs.js  styles.css  test-linkedin-scraper.py  test.ipynb  theme.js
rssjobs-testing/: README.md  pyproject.toml  requirements.txt  rssjobs_test.ipynb
(+6 files in other folders)
