 [project]
 name = "jobsentinel-testing"
 version = "0.1.0"
 description = "Notebook-based board scrapers inspired by JobSentinel (public endpoints + JobSpy where applicable)."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "requests>=2.32.0",
     "feedparser>=6.0.11",
     "pandas>=2.0.0",
     "jupyter>=1.0.0",
     "ipykernel>=6.0.0",
     "ipywidgets>=8.0.0",
     "python-jobspy>=1.1.79",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = []
 
 [tool.uv]
 dev-dependencies = []
 
