[project]
name = "jobspy-testing"
version = "0.1.0"
description = "Local testing for JobSpy (speedyapply/JobSpy). Kept minimal for future Marimo conversion."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-jobspy>=1.1.79",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
dev-dependencies = []
